make changes to noscript message

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div id="noscript">
                 <h1>Well...</h1>
                 <h2>This page looks a bit boring. Doesn't it?</h2>
-                <br>
+                <h1 style="font-size: 120pt; margin: 1px;">&#128528;</h1>
                 <h1>Please turn on JavaScript to enjoy this game!</h1>
             </div>
         </noscript>
