add farm, mine, and factory, and save games

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <img src="images/cookie.png" alt="Cookie" id="cookie-image">
             </div>
             <div id="middle-container">
-
+                <h1 style="text-align: center;">Stuff will be put here soon</h1>
+                <h2 style="text-align: center;">Upgrades, stats, settings, and more items will be coming soon as well</h2>
             </div>
             <div id="buy-items-container">
                 <h1>Buy Items</h1>
@@ -32,7 +33,7 @@
                         <img src="images/cursor.webp" alt="Cursor">
                         <div class="item-name-and-price-container">
                             <h1>Cursor</h1>
-                            <h3 id="cursor-price">10 Cookies</h3>
+                            <h5 id="cursor-price">10 Cookies</h5>
                         </div>
                     </div>
                     <div class="item-amount-container">
@@ -41,14 +42,50 @@
                 </div>
                 <div class="item-buy-container not-affordable" id="buy-grandma-container" onclick="buyGrandma()">
                     <div class="item-info-container">
-                        <img src="images/grandma.webp" alt="Cursor">
+                        <img src="images/grandma.webp" alt="Grandma">
                         <div class="item-name-and-price-container">
                             <h1>Grandma</h1>
-                            <h3 id="grandma-price">100 Cookies</h3>
+                            <h5 id="grandma-price">100 Cookies</h5>
                         </div>
                     </div>
                     <div class="item-amount-container">
                         <h1 id="grandma-amount">0</h1>
+                    </div>
+                </div>
+                <div class="item-buy-container not-affordable" id="buy-farm-container" onclick="buyFarm()">
+                    <div class="item-info-container">
+                        <img src="images/farm.webp" alt="Farm">
+                        <div class="item-name-and-price-container">
+                            <h1>Farm</h1>
+                            <h5 id="farm-price">1,100 Cookies</h5>
+                        </div>
+                    </div>
+                    <div class="item-amount-container">
+                        <h1 id="farm-amount">0</h1>
+                    </div>
+                </div>
+                <div class="item-buy-container not-affordable" id="buy-mine-container" onclick="buyMine()">
+                    <div class="item-info-container">
+                        <img src="images/mine.webp" alt="Mine">
+                        <div class="item-name-and-price-container">
+                            <h1>Mine</h1>
+                            <h5 id="mine-price">12,000 Cookies</h5>
+                        </div>
+                    </div>
+                    <div class="item-amount-container">
+                        <h1 id="mine-amount">0</h1>
+                    </div>
+                </div>
+                <div class="item-buy-container not-affordable" id="buy-factory-container" onclick="buyFactory()">
+                    <div class="item-info-container">
+                        <img src="images/factory.webp" alt="Factory">
+                        <div class="item-name-and-price-container">
+                            <h1>Factory</h1>
+                            <h5 id="factory-price">130,000 Cookies</h5>
+                        </div>
+                    </div>
+                    <div class="item-amount-container">
+                        <h1 id="factory-amount">0</h1>
                     </div>
                 </div>
             </div>
