add reset game button, and more groundwork for upgrades

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         <template id="added-cookies-from-click">
             <h2 class="added-cookies-from-click-message">+0 Cookies</h2>
         </template>
+        <template id="upgrade-template">
+            <div class="upgrade-item">
+
+            </div>
+        </template>
         <noscript>
             <div id="noscript">
                 <h1>Well...</h1>
@@ -26,11 +31,12 @@
             <div id="middle-container">
                 <h1 style="text-align: center;">Stuff will be put here soon</h1>
                 <h2 style="text-align: center;">Upgrades, stats, settings, and more items will be coming soon as well</h2>
+                <button class="dangerous" onclick="resetGame()">Reset Game</button>
             </div>
             <div id="buy-container">
                 <h1>Buy Upgrades</h1>
                 <div id="buy-upgrades-container">
-                    <h3 style="text-align: center;">Upgrades coming soon</h3>
+                    
                 </div>
                 <h1>Buy Items</h1>
                 <div id="buy-multiplier-container">
