add upgrade hover menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
         </template>
         <template id="upgrade-template">
             <div class="upgrade-item">
-
+                
+            </div>
+        </template>
+        <template id="upgrade-info-template">
+            <div id="upgrade-info-container">
+                <div id="upgrade-name-and-price-container">
+                    <h3 id="upgrade-name"></h3>
+                    <h3 id="upgrade-price"></h3>
+                </div>
+                <hr>
+                <h4 id="upgrade-description"></h4>
+                <q id="upgrade-quote"></q>
             </div>
         </template>
         <noscript>
